assets/sass/legacy/_main.scss
@import '../mixins/focus';

/* common */
.site-message {
  position: relative;
}
.site-message .glyphicon {
  position: absolute;
  top: 19px;
}
.site-message .message {
  margin-left: 27px;
}
.glyphicon, .label {
    margin-right: 0.2em;
}
dl > dt {
    margin-top: 0.5em;
}
iframe {
    border: none;
}
.pre {
    white-space: pre;
}
.unread {
    font-weight: bold;
}
.panel-title .pull-right {
    margin-left: 0.5em;
}
.nav .navbar-btn {
    margin-top: 10px;
    margin-bottom: 0;
}
.modal-dialog .modal-progress {
  padding: 40px 60px 20px;
}
#exercise-page-content blockquote {
  font-size:100%;
}
.unselectable {
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

/* alerts */
.sticky-alert {
    position: -webkit-sticky; /* Safari */
    position: sticky;
    top: 0;
    overflow: hidden;
    z-index: 100;
}

.alert-default {
    background-color: #fff;
    color: #333;
    border: 2px solid #333;
    font-weight: bold;

    /* only used once and should be moved if .alert is re-implemented */
    .button-container {
        display: flex;
        flex-wrap: wrap;

        .aplus-button--secondary {
            margin-right: 4px;
        }
    }

    .language-icon {
        float: left;
        height: 2em;
        margin-right: 10px;
    }
}

/* Menu groups */
.navbar-nav > li.menu-groups {
	> a.dropdown-toggle {
		background: rgba(255, 0, 0, 0.3);
		&:hover {
			background: rgba(255, 0, 0, 0.4);
		}
	}
	&.open{
		> a.dropdown-toggle {
			background: rgba(255, 0, 0, 0.4);
		}
	}
	.profile-avatars {
		display: inline-block;
		margin: -6px 3px;
	}
}

/* dropdown menu */
.dropdown-menu > li button {
	display: block;
	border: none;
	background: transparent;
	padding: 3px 20px;
	clear: both;
	font-weight: 400;
	line-height: 1.42857143;
	color: #333;
	white-space: nowrap;
	text-align: left;
	width: 100%;

	&:hover {
		background: #eee;
	}
}

/* Skip links */

.skip-link { /* This one is equally applicable to all skip links */
    position: absolute;
    width: 1px;
    height: 1px;
    margin: 0;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    display: block;
}

.skip-link:focus {
	@include focus-with-background-and-color;
    position: static;
    width: 100%;
    min-height: 50px;
    height: auto;
    margin: inherit;
    overflow: visible;
    clip: auto;
    padding: 15px;
}

.page-skip-link:focus {
	@include focus-with-background-and-color;
    min-height: 24px;
}

/* menus */
.course-menu .nav>li>a {
	@include focus-with-background-and-color;
    padding: 2px 2px 2px 5px;
}
#main-course-menu.fixed {
    position: fixed;
    top: 20px;
}
.course-menu .advert-thumbnail {
    margin-top: 4em;
    background-color: #d9edf7;
    border-color: #bce8f1;
}
.course-menu .advert-thumbnail h4 {
    margin-top: 0;
}
.siblings>.btn {
    max-width: 50%;
    overflow: hidden;
    text-overflow: ellipsis;
}
.menu-exercise, .menu-submission {
    max-width: 50%;
    text-overflow: ellipsis;
}
@media (min-width: 768px) {
    .col-sm-2 .nav a {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }
}
.toc li {
    list-style: none;
}
#course-content a{
	@include focus-with-background-and-color;
}
@media (min-width: 768px) {
	#course-content.sidebar-collapsed {
		width: 100%;
		padding-left: 40px;
	}
}

/* panels */
.module-panel .panel-heading {
    display: block;
}
.module-panel .panel-title .caret {
    margin-right: 0.5em;
}
.collapsed .caret {
    border-left: 4px dashed;
    border-top: 4px solid transparent;
    border-bottom: 4px solid transparent;
}
.module-panel table {
    margin: 0;
}

/* point progress */
.progress {
    position: relative;
}
/* TODO: Move defining the stickiness to a single
file for all the components */
.sticky-progress {
    position: -webkit-sticky; /* Safari */
    position: sticky;
    top: 0;
    overflow: hidden;
    z-index: 100;
}
.progress .required-points {
    position: absolute;
    height: 20px;
    border-left: 1px solid black;
}
.glyphicon.red {
  color: #ff7070;
}
.panel-primary>.panel-heading .badge-danger,
.panel-primary>.panel-heading .badge-warning,
.panel-primary>.panel-heading .badge-info,
.panel-primary>.panel-heading .badge-success {
    border: 1px solid #fff;
    padding: 2px 6px;
}
.unconfirmed-points {
  opacity: 0.6;
}
td.submissions-dropdown {
  text-align:center;
}

/* exercise wells */
[data-aplus-exercise] {
    border: 1px solid #bce8f1;/*grey #e3e3e3;*/
    border-radius: 4px;
    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
    box-shadow: 0 1px 1px rgba(0,0,0,.05);
    margin-bottom: 10px;
    min-height: 150px;
}
.exercise-summary {
    background-color: #d9edf7;/*primary #337ab7;*/
    border-color: #bce8f1;/*primary #2e6da4;*/
    border-radius: 0;
}
[data-aplus-exercise] .exercise-summary {
    border-top: none;
    border-left: none;
    border-right: none;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
}
.exercise-summary .navbar-nav {
	margin: 0;
}
.exercise-summary .navbar-nav .navbar-text {
    margin: 10px 15px 10px 15px;
}
.exercise-summary .navbar-nav .navbar-text ul {
	list-style: none;
	padding-left: 0;
}
/* Use flexbox to align header navbar sections (when the navbar is not
collapsed due to narrow viewport) */
@media (min-width: $grid-float-breakpoint) {
	.exercise-summary .navbar-nav {
		align-items: stretch;
		display: flex;
		flex-wrap: wrap;
	}
	.exercise-summary .navbar-nav>li {
		display: flex;
	}
	.exercise-summary .navbar-nav>li>a {
		align-items: center;
		display: flex;
	}
}
.exercise-summary .navbar-nav>li>a,
.exercise-summary .navbar-nav>.active>a,
.exercise-summary .navbar-nav>.active>a:focus,
.exercise-summary .navbar-nav>.active>a:hover,
.exercise-summary .navbar-nav .navbar-text {
    color: #31708f;
    background-color: transparent;
}
.exercise-summary .navbar-nav>li>a:hover,
.exercise-summary .navbar-nav>.open>a,
.exercise-summary .navbar-nav>.open>a:focus,
.exercise-summary .navbar-nav>.open>a:hover {
    background-color: rgba(0,0,0,0.04);
}
.navbar-nav>li>a.file-modal {
    display: inline;
    padding: 0;
    text-decoration: underline;
}
.exercise-response {
  padding: 0 1em;
}
[data-aplus-no-summary] .exercise-summary {
    display: none;
}
.form-inline .form-group div {
    display: inline-block;
}

.btn-group button:first-child {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

/* results table */

table.results-table .category-row {
    font-weight: bold;
}

